cleaning, enhance the expected value and fixes some scraper

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest1.bib
@@ -4,6 +4,7 @@ author = {Singh, Seema},
 booktitle = {Cell},
 comment = {doi: 10.1016/j.cell.2009.03.011},
 doi = {10.1016/j.cell.2009.03.011},
+issn = {00928674},
 journal = {Cell},
 number = {6},
 pages = {987--989},
