--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest2.bib
@@ -4,6 +4,7 @@ author = {Lim, Gerald H.W and Huber, Greg},
 booktitle = {Biophysical Journal},
 comment = {doi: 10.1016/j.bpj.2008.10.074},
 doi = {10.1016/j.bpj.2008.10.074},
+issn = {00063495},
 journal = {Biophysical Journal},
 number = {6},
 pages = {2064--2081},
