--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DBLPScraperUnitTest6.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DBLPScraperUnitTest6.bib
@@ -9,7 +9,7 @@
   crossref  = {DBLP:conf/icassp/2014},
   url       = {http://dx.doi.org/10.1109/ICASSP.2014.6853551},
   doi       = {10.1109/ICASSP.2014.6853551},
-    biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icassp/AlmeidaK14},
+    biburl    = {http://dblp.dagstuhl.de/rec/bib/conf/icassp/AlmeidaK14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
@@ -19,7 +19,6 @@
   publisher = {{IEEE}},
   year      = {2014},
   url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6844297},
-    biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icassp/2014},
+    biburl    = {http://dblp.dagstuhl.de/rec/bib/conf/icassp/2014},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
-
