--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest1.bib
@@ -1,6 +1,6 @@
 @INPROCEEDINGS{5286085,
 
-author={Limpens, F. and Gandon, F. and Buffa, M.},
+author={F. Limpens and F. Gandon and M. Buffa},
   booktitle={Web Intelligence and Intelligent Agent Technologies, 2009. WI-IAT '09. IEEE/WIC/ACM International Joint Conferences on}, 
  title={Collaborative Semantic Structuring of Folksonomies}, 
   year={2009},
