--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest2.bib
@@ -1,7 +1,7 @@
 @ARTICLE{4383076,
 
-author={Hotho, G. and Villemoes, L.F. and Breebaart, J.},
-  journal={Audio, Speech, and Language Processing, IEEE Transactions on}, 
+author={G. Hotho and L. F. Villemoes and J. Breebaart},
+  journal={IEEE Transactions on Audio, Speech, and Language Processing}, 
  title={A Backward-Compatible Multichannel Audio Codec}, 
   year={2008},
   volume={16},
