--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest1.bib
@@ -1,12 +1,13 @@
 @INPROCEEDINGS{6136685,
 
-author={Cem, E. and Koc, T. and Ozkasap, O.},
-  booktitle={Energy Aware Computing (ICEAC), 2011 International Conference on}, 
+author={E. Cem and T. Koc and O. Ozkasap},
+  booktitle={2011 International Conference on Energy Aware Computing}, 
  title={Energy efficient hierarchical epidemics in peer-to-peer systems}, 
   year={2011},
   pages={1-5},
   abstract={Epidemic or gossip-based mechanisms are preferred in several distributed protocols for their ease of deployment, simplicity, robustness against failures, load-balancing and limited resource usage. In flat neighborhood epidemics, peers have similar responsibilities and all participate in gossiping via neighboring peers. We have proposed an energy cost model for a generic peer using flat neighborhood epidemics, and examined the effect of protocol parameters to characterize energy consumption. Although it has been shown that a peers power consumption amount is independent of population size, peers always need to be active to process incoming gossip messages. In this study, we consider power awareness features of flat and hierarchical epidemics in peer-to-peer (P2P) systems, and propose a power-aware hierarchical epidemic approach with its energy cost model and analysis. In this adaptive approach, only a subset of peer population is active in gossiping by forming an overlay, so that the other peers can switch to idle state. It also allows data aggregation that can be utilized to reduce gossip message size. As a case study for epidemic protocol, we use our approach and simulation model for frequent item set discovery in unstructured P2P networks.},
   keywords={computer network reliability;overlay networks;peer-to-peer computing;power aware computing;protocols;resource allocation;data aggregation;distributed protocols;energy cost model;energy efficient hierarchical epidemics;epidemic protocol;flat neighborhood epidemics;frequent item set discovery;gossip-based mechanisms;load-balancing;peer power consumption;peer-to-peer systems;power awareness features;power-aware hierarchical epidemic approach;unstructured P2P networks;Barium;Convergence;Energy consumption;Erbium;Peer to peer computing;Protocols;Topology;dominating set;energy cost model;energy efficiency;epidemic;gossip-based;peer-to-peer},
   doi={10.1109/ICEAC.2011.6136685},
+  ISSN={2381-0947},
   month={Nov},url = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?tp=&arnumber=6136685&contentType=Conference+Publications&searchField%3DSearch_All%26queryText%3DEnergy+efficient+hierarchical+epidemics+in+peer-to-peer+systems}
 }
