--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/KargerScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/KargerScraperUnitURLTest.bib
@@ -1,12 +1,12 @@
-@article{kirchmann2011scl90r,
-abstract = {Background/Aims: Based on pretreatment psychopathological symptoms measured with the Symptom Checklist 90 Revised (SCL-90-R), this study investigated whether stable symptom clusters exist among psychotherapy inpatients. Furthermore, it was examined whether the identified clusters would differ with respect to clinical characteristics and treatment outcome. <i>Sampling and Methods:</i> We collected data from a total of 3,688 psychotherapeutic inpatients involved in psychodynamic group psychotherapy from 10 hospitals. Ipsatized SCL-90-R presymptom data were used as input variables for a series of cluster analyses combining hierarchical (Ward algorithm) and non-hierarchical (k-means) procedures. <i>Results:</i> The cluster analyses revealed a 7-cluster solution with the following subgroups: (1) insecure-paranoid, (2) neutralizing, (3) phobic-anxious, (4) aggressive, (5) insecure-phobic, (6) somatizing, and (7) obsessive-depressive. Cross-validation with independent data sets, as well as alternative statistical procedures, confirmed the stability of the 7-cluster solution. Correlations with clinical diagnoses and interpersonal problems indicate the clinical relevance of the cluster differentiation. The cluster insecure-phobic proved to be less beneficial when used as a predictor of treatment outcome. Furthermore, we found moderator effects between cluster assignment and pretreatment interpersonal problems: the overall amount of interpersonal problems seemed to be detrimental to the patients from the clusters insecure-phobic and somatizing, whereas a relatively (ipsatized) heightened level of dominance was advantageous for improving psychopathological complaints of the patients from the cluster aggressive. <i>Conclusions:</i> We could identify typical and clinically meaningful symptom clusters for the population of inpatients undergoing psychodynamic group psychotherapy in Germany. This finding could help strengthen clinical research which is led by the assumption that it is relevant to characterize patients by a specific pattern of psychopathological symptoms rather than or in addition to one (or more) distinct diagnostic categories.},
-author = {Kirchmann, H. and Schreiber-Willnow, K. and Seidler, K.-P and Strauss, B.},
-issn = {02544962},
-journal = {Psychopathology},
-number = {2},
-pages = {71--82},
-title = {SCL-90-R Symptom Profile Clusters among Inpatients Undergoing Psychodynamic Group Psychotherapy: Cluster Stability, Associations with Clinical Characteristics and Treatment Outcome},
-url = {http://www.karger.com/DOI/10.1159/000317579},
-volume = {44},
-year = {2011}
+@article{amarenco2009classification,
+abstract = {This article reviews published stroke subtype classification systems and offers rules and a basis for a new way to subtype stroke patients. Stroke subtyping can have different purposes, e.g. describing patients’ characteristics in a clinical trial, grouping patients in an epidemiological study, careful phenotyping of patients in a genetic study, and classifying patients for therapeutic decision-making in daily practice. The classification should distinguish between ischemic and hemorrhagic stroke, subarachnoid hemorrhage, cerebral venous thrombosis, and spinal cord stroke. Regarding the 4 main categories of etiologies of ischemic stroke (i.e. atherothrombotic, small vessel disease, cardioembolic, and other causes), the classification should reflect the most likely etiology without neglecting the vascular conditions that are also found (e.g. evidence of small vessel disease in the presence of severe large vessel obstructions). Phenotypes of large cohorts can also be characterized by surrogate markers or intermediate phenotypes (e.g. presence of internal carotid artery plaque, intima-media thickness of the common carotid artery, leukoaraiosis, microbleeds, or multiple lacunae). Parallel classifications (i.e. surrogate markers) may serve as within-study abnormalities to support research findings.},
+author = {Amarenco, P. and Bogousslavsky, J. and Caplan, L.R and Donnan, G.A and Hennerici, M.G},
+issn = {10159770},
+journal = {Cerebrovascular Diseases},
+number = {5},
+pages = {493--501},
+title = {Classification of Stroke Subtypes},
+url = {http://www.karger.com/DOI/10.1159/000210432},
+volume = {27},
+year = {2009}
 }
