--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest1.bib
@@ -8,7 +8,7 @@
     month = {01},
     volume = {6},
     url = {http://dx.doi.org/10.1371%2Fjournal.pbio.0060010},
-    pages = {e10},
+    pages = {1-9},
     abstract = {
         <p>We have used a genetic mouse model with a proofreading-deficient mitochondrial polymerase to mutagenize the mouse mitochondrial genome. The inherited mutations are subject to rapid purifying selection against amino acid substitutions.</p>
       },
