--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest2.bib
@@ -8,7 +8,7 @@
     month = {03},
     volume = {7},
     url = {http://dx.doi.org/10.1371%2Fjournal.pmed.1000248},
-    pages = {e1000248},
+    pages = {1-13},
     abstract = {
 <p>Majid Ezzati and colleagues examine the contribution of a set of risk factors (smoking, high blood pressure, elevated blood glucose, and adiposity) to socioeconomic disparities in life expectancy in the US population.</p>
 },
