--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest4.bib
@@ -8,7 +8,7 @@
     month = {09},
     volume = {8},
     url = {http://dx.doi.org/10.1371%2Fjournal.pmed.1001094},
-    pages = {e1001094},
+    pages = {1-11},
     abstract = {
         <p>Kimmo Herttua and colleagues showed that living alone is associated with a substantially increased risk of alcohol-related mortality, irrespective of gender, socioeconomic status, or cause of death, and that this effect was exacerbated after a price reduction in alcohol in 2004.</p>
       },
