--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest1.bib
@@ -1,12 +1,12 @@
-@inproceedings{McNay2005,
-author = {K. McNay and Jane, -- Humphries and Stephan. Klasen},
-year = {2005},
-title = {Excess Female Mortality in Nineteenth-Century England and Wales: A Regional Analysis},
-url = {https://muse.jhu.edu/journals/social_science_history/v029/29.4mcnay.html},
-journal = {Social Science History},
-issn = {1527-8034},
-volume = {29},
-issue = {4},
-pages = {649-681},
-abstract = {Sex differences in mortality among historical populations are an intriguing yet neglected issue. In mid-nineteenth-century England and Wales, although women and girls enjoyed an overall longevity advantage, they tended to die at higher rates than males at ages when modern life tables show female advantage. We use multilevel modeling to analyze these sex differences in mortality. We identify significant regional variation, related to local demographic conditions, economic structure, and the nature of female employment. But some regional variation remains unexplained, suggesting the need for further investigation.}
+@inproceedings{mcnay2005,
+  title = {Excess Female Mortality in Nineteenth-Century England and Wales: A Regional Analysis},
+  url = {https://muse.jhu.edu/article/190669},
+  journal = {Social Science History},
+  issn = {1527-8034},
+  volume = {29},
+  number = {4},
+  author = {McNay, K. and Humphries, Jane, -- and Klasen, Stephan.},
+  year = {2005},
+  pages = {649--681},
+  abstract = {Sex differences in mortality among historical populations are an intriguing yet neglected issue. In mid-nineteenth-century England and Wales, although women and girls enjoyed an overall longevity advantage, they tended to die at higher rates than males at ages when modern life tables show female advantage. We use multilevel modeling to analyze these sex differences in mortality. We identify significant regional variation, related to local demographic conditions, economic structure, and the nature of female employment. But some regional variation remains unexplained, suggesting the need for further investigation.},
 }
