--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest1.bib
@@ -1,7 +1,7 @@
 @book{SWB-087550059,
 	address={München},
 	author={Witten, Ian H. and Frank, Eibe},
-	bestand={Universitätsbibliothek Freiburg  [Signatur: NA 2001/80];Universität Freiburg, Institut für Medizinische Biometrie und  [Signatur: Frei 140: WIT/11516/Inf];Saarländische Universitäts- und Landesbibliothek  [Signatur: 2002-5960];Universität des Saarlandes, ;Universität des Saarlandes,  [Signatur: CSC ARTI 5593];Sächsische Landesbibliothek - Staats- und Universitätsbibliothek  [Signatur: 2001 8 033655];Universität Konstanz, Kommunikations-, Informations-, Medienzentrum (KIM) ;Universität Mannheim, Universitätsbibliothek ;Universitätsbibliothek Leipzig ;Universitätsbibliothek Heidelberg  [Signatur: LN-U10-12308];Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek  [Signatur: 2001 A 423];Karlsruher Institut für Technologie (KIT), KIT-Bibliothek Nord  [Signatur: M Wit 20];Universitätsbibliothek Stuttgart  [Signatur: 5H 1071];Badische Landesbibliothek  [Signatur: 105 A 689];TU Bergakademie Freiberg, Universitätsbibliothek  [Signatur: 01.7921  8.];Hochschule Mittweida, Hochschulbibliothek ;Hochschule Zittau/Görlitz - Hochschulbibliothek ;Hochschulbibliothek Heilbronn  [Signatur: 621.846 WIT];Hochschulbibliothek Heilbronn, Standort Künzelsau  [Signatur: 621.846 WIT];Hochschule für Technik, Wirtschaft und Kultur Leipzig ;Hochschulbibliothek Konstanz -  [Signatur: wck43/173];Hochschule für Technik und Wirtschaft  [Signatur: ST 300-02 0444 01];Hochschule Mannheim, Hochschulbibliothek  [Signatur: E IV 11500];Hochschule Furtwangen, Hochschule für Technik und Wirtschaft ;Stadtbibliothek Chemnitz ;Duale Hochschule Baden-Württemberg Stuttgart  [Signatur: THd 51];Hochschule Albstadt-Sigmaringen, Bibliothek Albstadt  [Signatur: InWi 83];Hochschule Aalen  [Signatur: 46 Wit];Duale Hochschule Baden-Württemberg Mannheim ;Hochschule Ulm, Hochschule für Technik  [Signatur: 423 Wit];Berufsakademie Sachsen, Staatliche Studienakademie Dresden ;Duale Hochschule Baden-Württemberg Ravensburg  [Signatur: IWb 5];Duale Hochschule Baden-Württemberg Lörrach,  [Signatur: ST 270];Duale Hochschule Baden-Württemberg Heidenheim ;Fraunhofer-Institut für Arbeitswirtschaft und Organisation (IAO)  [Signatur: 65.012.4:681.3(002) WIT];Duale Hochschule Baden-Württemberg Ravensburg,  [Signatur: IPa 13];},
+	bestand={Universitätsbibliothek Freiburg  [Signatur: NA 2001/80];Universität Freiburg, Institut für Medizinische Biometrie und  [Signatur: Frei 140: WIT/11516/Inf];Saarländische Universitäts- und Landesbibliothek  [Signatur: 2002-5960];Universität des Saarlandes, ;Universität des Saarlandes,  [Signatur: CSC ARTI 5593];Sächsische Landesbibliothek - Staats- und Universitätsbibliothek  [Signatur: 2001 8 033655];Universität Konstanz, Kommunikations-, Informations-, Medienzentrum (KIM) ;Universitätsbibliothek Leipzig ;Universitätsbibliothek Heidelberg  [Signatur: LN-U10-12308];Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek  [Signatur: 2001 A 423];Karlsruher Institut für Technologie (KIT), KIT-Bibliothek Nord  [Signatur: M Wit 20];Universitätsbibliothek Stuttgart  [Signatur: 5H 1071];Badische Landesbibliothek  [Signatur: 105 A 689];TU Bergakademie Freiberg, Universitätsbibliothek  [Signatur: 01.7921  8.];Hochschule Mittweida, Hochschulbibliothek ;Hochschule Zittau/Görlitz - Hochschulbibliothek ;Hochschulbibliothek Heilbronn  [Signatur: 621.846 WIT];Hochschulbibliothek Heilbronn, Standort Künzelsau  [Signatur: 621.846 WIT];Hochschule für Technik, Wirtschaft und Kultur Leipzig ;Hochschulbibliothek Konstanz -  [Signatur: wck43/173];Hochschule für Technik und Wirtschaft  [Signatur: ST 300-02 0444 01];Hochschule Mannheim, Hochschulbibliothek  [Signatur: E IV 11500];Hochschule Furtwangen, Hochschule für Technik und Wirtschaft ;Stadtbibliothek Chemnitz ;Duale Hochschule Baden-Württemberg Stuttgart  [Signatur: THd 51];Hochschule Albstadt-Sigmaringen, Bibliothek Albstadt  [Signatur: InWi 83];Hochschule Aalen  [Signatur: 46 Wit];Duale Hochschule Baden-Württemberg Mannheim ;Hochschule Ulm, Hochschule für Technik  [Signatur: 423 Wit];Berufsakademie Sachsen, Staatliche Studienakademie Dresden ;Duale Hochschule Baden-Württemberg Ravensburg  [Signatur: IWb 5];Duale Hochschule Baden-Württemberg Lörrach,  [Signatur: ST 270];Duale Hochschule Baden-Württemberg Heidenheim ;Fraunhofer-Institut für Arbeitswirtschaft und Organisation (IAO)  [Signatur: 65.012.4:681.3(002) WIT];Duale Hochschule Baden-Württemberg Ravensburg,  [Signatur: IPa 13];},
 	isbn={3-446-21533-6},
 	keywords={ ; Data Mining},
 	publisher={Hanser},
