--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
@@ -1,6 +1,6 @@
 @INPROCEEDINGS{4536262,
 
-author={Pakin, Scott},
+author={S. Pakin},
   booktitle={Parallel and Distributed Processing, 2008. IPDPS 2008. IEEE International Symposium on}, 
  title={Receiver-initiated message passing over RDMA Networks}, 
   year={2008},
