--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NowPublishersScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NowPublishersScraperUnitURLTest1.bib
@@ -8,5 +8,5 @@ doi = {10.1561/1500000043},
 issn = {1554-0669},
 number = {2},
 pages = {91-208},
-author = {Nattiya Kanhabua, Roi Blanco and Kjetil Nørvåg}
+author = {Nattiya Kanhabua and Roi Blanco and Kjetil Nørvåg}
 }
