--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest6.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest6.bib
@@ -8,7 +8,7 @@
     month = {09},
     volume = {7},
     url = {http://dx.doi.org/10.1371%2Fjournal.pgen.1002285},
-    pages = {e1002285},
+    pages = {1-16},
     abstract = {
         <title>Author Summary</title>
         <p>Pigmentation has since long constituted a prime model to study how genes act and interact. The <italic>PMEL</italic> gene encodes a protein exclusively found in the melanosomes of pigment-producing cells. Mutations in PMEL underlie some spectacular color phenotypes in animals including Dominant white color in chickens, Silver in horses, and Merle in dogs, but no spontaneous mutation causing a complete inactivation of this gene has yet been found in mammals. We have now developed a PMEL knockout mouse to further study the function of this protein. We show that mice lacking PMEL have almost normal visible pigmentation. However, loss of PMEL has a dramatic effect on the morphology of the melanosomes in skin, hair, and eye, such that the normally rod-shaped melanosomes in wild-type animals are spherical in the knockout mice. The knockout animals also have a substantial reduction in the content of black pigment in hair. The study establishes that PMEL has a critical role for maintaining normal pigment production.</p>
