--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest9.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest9.bib
@@ -8,7 +8,7 @@
     month = {09},
     volume = {5},
     url = {http://dx.doi.org/10.1371%2Fjournal.pntd.0001305},
-    pages = {e1305},
+    pages = {1-6},
     abstract = {
         <title>Author Summary</title>
         <p>Buruli ulcer (BU) is a destructive skin condition caused by infection with the environmental bacterium, <italic>Mycobacterium ulcerans</italic>. BU has been reported in more than 30 countries in Africa, the Americas, Asia and the Western Pacific. How people become infected with <italic>M. ulcerans</italic> is not completely understood, but numerous studies have explored the role of biting insects. In 2007, it was discovered that <italic>M. ulcerans</italic> could be detected in association with mosquitoes trapped in one town in southeastern Australia during a large outbreak of BU. In the present study we investigated whether there was a relationship between the incidence of BU in humans in several towns and the likelihood of detecting <italic>M. ulcerans</italic> in mosquitoes trapped in those locations. We found a strong association between the proportion of <italic>M. ulcerans</italic>-positive mosquitoes and the incidence of human disease. The results of this study strengthen the hypothesis that mosquitoes are involved in the transmission of <italic>M. ulcerans</italic> in southeastern Australia. This has implications for the development of strategies to control and prevent BU.</p>
