--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -411,7 +411,9 @@ delete.confirm.post          = Do you really want to delete this post?
 delete.confirm.review        = Do you really want to delete this review?
 
 delimiter = delimiter
-delimiter.help = Choose the delimiter that separates the tags (keywords) in the BibTeX/EndNote snippet.
+
+delimiter.help        = Choose the delimiter that separates the tags (keywords) in the BibTeX/EndNote snippet.
+
 delimiters.comma      = comma
 delimiters.semicolon  = semicolon
 delimiters.whitespace = whitespace
@@ -2008,7 +2010,7 @@ settings.advanced                                           = advanced
 settings.all                                                = all
 settings.alphabet                                           = alphabet
 settings.apidoc                                             = API Documentation
-settings.apisupport											= We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
+settings.apisupport                                         = We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
 settings.bookmark                                           = show bookmarks
 settings.browser.fileselect                                 = select your file
 settings.browser.fileselect.help                            = a file containing your bookmarks exported from firefox
@@ -2051,6 +2053,8 @@ settings.german                                             = German
 settings.group                                              = group
 settings.group.accInvite.button                             = accept
 settings.group.accInvite.button.title                       = accept the group invite
+settings.group.accInvite.buttonShare.button                 = accept and share documents
+settings.group.accInvite.buttonShare.button.title           = accept the group invitation and share documents with group
 settings.group.accUser                                      = accept join request of user {0}
 settings.group.accUser.button                               = accept
 settings.group.accUser.button.title                         = accept join request of user
