--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -393,7 +393,9 @@ delete.confirm.post          = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432
 delete.confirm.review        = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u0443 \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u044E?
 
 delimiter = \u0420\u0430\u0437\u0434\u0435\u043B\u0438\u0442\u0435\u043B\u044C
-delimiter.help = 
+
+delimiter.help        = 
+
 delimiters.comma      = \u0437\u0430\u043F\u044F\u0442\u0430\u044F
 delimiters.semicolon  = \u0442\u043E\u0447\u043A\u0430 \u0441 \u0437\u0430\u043F\u044F\u0442\u043E\u0439
 delimiters.whitespace = \u043F\u0440\u043E\u0431\u0435\u043B
@@ -1834,7 +1836,7 @@ settings.advanced                                           = \u0440\u0430\u0441
 settings.all                                                = \u0432\u0441\u0435
 settings.alphabet                                           = \u0430\u043B\u0444\u0430\u0432\u0438\u0442
 settings.apidoc                                             = API-\u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430\u0446\u0438\u044F
-settings.apisupport											=
+settings.apisupport                                         = 
 settings.bookmark                                           = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0437\u0430\u043A\u043B\u0430\u0434\u043A\u0438
 settings.browser.fileselect                                 = \u0432\u044B\u0431\u0440\u0430\u0442\u044C \u0444\u0430\u0439\u043B
 settings.browser.fileselect.help                            = \u0444\u0430\u0439\u043B, \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0449\u0438\u0439 \u0412\u0430\u0448\u0438 \u0437\u0430\u043A\u043B\u0430\u0434\u043A\u0438, \u044D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u0435 \u0438\u0437 Firefox
@@ -1877,6 +1879,8 @@ settings.german                                             = \u043D\u0435\u043C
 settings.group                                              = \u0433\u0440\u0443\u043F\u043F\u0430
 settings.group.accInvite.button                             = \u043F\u0440\u0438\u043D\u044F\u0442\u044C
 settings.group.accInvite.button.title                       = \u041F\u0440\u0438\u043D\u044F\u0442\u044C \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435 \u0432 \u0433\u0440\u0443\u043F\u043F\u0443
+settings.group.accInvite.buttonShare.button                 = 
+settings.group.accInvite.buttonShare.button.title           = 
 settings.group.accUser                                      = \u041E\u0434\u043E\u0431\u0440\u0438\u0442\u044C \u0437\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 \u0432\u0441\u0442\u0443\u043F\u043B\u0435\u043D\u0438\u0435 \u0432 \u0433\u0440\u0443\u043F\u043F\u0443 \u043E\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F {0}
 settings.group.addUser.button                               = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 settings.group.addUser.button.title                         = \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
