--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2254,6 +2254,8 @@ settings.yourapikey                                         = Your API key is:
 
 show = show
 
+show.more.users = show all {0} users
+
 similartags = similar tags
 
 simpleHtml = simple HTML
