--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2243,6 +2243,8 @@ settings.yourapikey                                         = Ihr API-Schl\u00FC
 
 show = anzeigen
 
+show.more.users = alle {0} Benutzer anzeigen
+
 similartags = \u00C4hnliche Tags
 
 simpleHtml = simple HTML
