--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1838,7 +1838,10 @@ publications = Publikationen
 publications.abstract.headline   = Zusammenfassung
 publications.citations.headline  = Zitieren Sie diese Publikation
 publications.discussion.headline = Kommentare und Rezensionen
+publications.related.citing      = Publikationen, die diese Publikation zitieren
 publications.related.empty       = keine Publikationen gefunden
+publications.related.headline    = Verwandte Publikationen
+publications.related.referenced  = Publikationen, die von dieser Publikation referenziert werden
 publications.resource.headline   = Links und Ressourcen
 
 qrcode.actions.download                       = ohne QR-Code
