--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1685,7 +1685,10 @@ publications = \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438
 publications.abstract.headline   = \u0410\u043D\u043D\u043E\u0442\u0430\u0446\u0438\u044F
 publications.citations.headline  = \u0426\u0438\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u044D\u0442\u0443 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E
 publications.discussion.headline = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438 \u0438 \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u0438
+publications.related.citing      = 
 publications.related.empty       = 
+publications.related.headline    = 
+publications.related.referenced  = 
 publications.resource.headline   = \u041B\u0438\u043D\u043A\u0438 \u0438 \u0440\u0435\u0441\u0443\u0440\u0441\u044B
 
 qrcode.actions.download                       = \u0431\u0435\u0437 QR-\u043A\u043E\u0434\u0430
