fixed search info button positioning

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1999,7 +1999,7 @@ scraper_info.scraper_link_description = Im Folgenden finden Sie eine Liste aller
 scraper_info.title                    = Information zu Scrapern
 
 search.info.text     = Suchoptionen
-search.info.url      = /help_de/SearchPageHelp
+search.info.url      = /help_de/SuchenHilfe
 search.invalid.query = Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
 
 selection = Schnipsel
