added switch for create review and comment

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -474,26 +474,30 @@ disambiguation.pleaseChooseMsg                      = Please choose a person acc
 disambiguation.postPanelHeader                      = Related Post
 disambiguation.searchPersonButton                   = Search other name
 
-discussion.bookmarkReferences = Bookmarks
-discussion.byGroup            = show posts recently discussed by members of {0}
-discussion.byGroup.help       = show bookmarks and publications recently commented or reviewed by members
-discussion.byUser             = show posts recently discussed by {0}
-discussion.byUser.help        = show bookmarks and publications recently commented or reviewed by {0}
-discussion.info               = On this page you can rate and comment this {0}. You can also create links to other posts.
-discussion.info.bookmark      = bookmark
-discussion.info.bookmarks     = The link has following syntax:  (url|bookmark)/hash(/username)?
-discussion.info.examples      = Example to create an link: you must mark your link with [[...]]
-discussion.info.publication   = publication
-discussion.info.publications  = The link has following syntax:  (publication|bibtex)?/hash(/username)?
-discussion.info.resource      = resource
-discussion.references         = References
-discussion.resourceLink       = Show internal link to this {0}
-discussion.resourceLink.help  = You can use this internal link to create references to this post in your discussions. Just copy this internal link and paste it in your discussion text.
-discussion.resourceLink.title = internal link
-discussion.show.less          = show only the last five reviews/comments
-discussion.show.more          = show all discussion
-discussion.showGroup          = show posts of {0}
-discussion.showUser           = show posts of {0}
+discussion.bookmark.reviewCommentInfo    = You can either comment or review this website.
+discussion.bookmarkReferences            = Bookmarks
+discussion.byGroup                       = show posts recently discussed by members of {0}
+discussion.byGroup.help                  = show bookmarks and publications recently commented or reviewed by members
+discussion.byUser                        = show posts recently discussed by {0}
+discussion.byUser.help                   = show bookmarks and publications recently commented or reviewed by {0}
+discussion.comment.create                = Write comment
+discussion.info                          = On this page you can rate and comment this {0}. You can also create links to other posts.
+discussion.info.bookmark                 = bookmark
+discussion.info.bookmarks                = The link has following syntax:  (url|bookmark)/hash(/username)?
+discussion.info.examples                 = Example to create an link: you must mark your link with [[...]]
+discussion.info.publication              = publication
+discussion.info.publications             = The link has following syntax:  (publication|bibtex)?/hash(/username)?
+discussion.info.resource                 = resource
+discussion.publication.reviewCommentInfo = You can either comment or review this publication.
+discussion.references                    = References
+discussion.resourceLink                  = Show internal link to this {0}
+discussion.resourceLink.help             = You can use this internal link to create references to this post in your discussions. Just copy this internal link and paste it in your discussion text.
+discussion.resourceLink.title            = internal link
+discussion.review.create                 = Write review
+discussion.show.less                     = show only the last five reviews/comments
+discussion.show.more                     = show all discussion
+discussion.showGroup                     = show posts of {0}
+discussion.showUser                      = show posts of {0}
 
 editTags.addTags              = by these tags
 editTags.addTags.help         = In all your posts that have all the tags entered into the field above, these tags will be replaced by those entered in this field.
