--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -473,26 +473,30 @@ disambiguation.pleaseChooseMsg                      = Bitte w\u00E4hlen Sie eine
 disambiguation.postPanelHeader                      = Verwandter Eintrag
 disambiguation.searchPersonButton                   = Einen anderen Namen suchen
 
-discussion.bookmarkReferences = Bookmarks
-discussion.byGroup            = Zeige k\u00FCrzlich diskutierte Eintr\u00E4ge von {0}
-discussion.byGroup.help       = Zeige Lesezeichen und Publikationen, die von Mitgliedern bewertet oder kommentiert wurden
-discussion.byUser             = Zeige von {0} diskutierte Eintr\u00E4ge
-discussion.byUser.help        = Zeige Lesezeichen und Publikationen, die von {0} bewertet oder kommentiert wurden
-discussion.info               = Auf dieser Seite k\u00F6nnen sie die {0} bewerten und kommentieren. Au\u00DFerdem k\u00F6nnen Sie Verweise zu anderen Eintr\u00E4gen in ihre Kommentare einbetten.
-discussion.info.bookmark      = Lesezeichen
-discussion.info.bookmarks     = Der Verweis setzt sich aus drei Teilen nach folgendem Muster zusammen: (url|bookmark)/hash(/username)?
-discussion.info.examples      = Beispile zum Erstellen eines Verweises: Grunds\u00E4tzlich wird ein Verweis mit [[...]] markiert
-discussion.info.publication   = Publikation
-discussion.info.publications  = Der Verweis setzt sich aus drei Teilen nach folgendem Muster zusammen: (publication|bibtex)?/hash(/username)?
-discussion.info.resource      = Ressource
-discussion.references         = Referenzen
-discussion.resourceLink       = Den internen Link f\u00FCr diese {0} anzeigen
-discussion.resourceLink.help  = Sie k\u00F6nnen diesen internen Link benutzen, um diesen Eintrag in Ihren Diskussionen zu referenzieren. Sie m\u00FCssen nur diesen Link kopieren und in den Text zu ihrer Diskussion hinzuf\u00FCgen.
-discussion.resourceLink.title = Interner Link
-discussion.show.less          = nur die letzten f\u00FCnf Bewertungen/Kommentare zeigen
-discussion.show.more          = gesammte Diskussion anzeigen
-discussion.showGroup          = Zeige Eintr\u00E4ge von {0}
-discussion.showUser           = Zeige Eintr\u00E4ge von {0}
+discussion.bookmark.reviewCommentInfo    = Sie k\u00F6nnen diese Webseite entweder kommentieren oder bewerten.
+discussion.bookmarkReferences            = Bookmarks
+discussion.byGroup                       = Zeige k\u00FCrzlich diskutierte Eintr\u00E4ge von {0}
+discussion.byGroup.help                  = Zeige Lesezeichen und Publikationen, die von Mitgliedern bewertet oder kommentiert wurden
+discussion.byUser                        = Zeige von {0} diskutierte Eintr\u00E4ge
+discussion.byUser.help                   = Zeige Lesezeichen und Publikationen, die von {0} bewertet oder kommentiert wurden
+discussion.comment.create                = Kommentar schreiben
+discussion.info                          = Auf dieser Seite k\u00F6nnen sie die {0} bewerten und kommentieren. Au\u00DFerdem k\u00F6nnen Sie Verweise zu anderen Eintr\u00E4gen in ihre Kommentare einbetten.
+discussion.info.bookmark                 = Lesezeichen
+discussion.info.bookmarks                = Der Verweis setzt sich aus drei Teilen nach folgendem Muster zusammen: (url|bookmark)/hash(/username)?
+discussion.info.examples                 = Beispile zum Erstellen eines Verweises: Grunds\u00E4tzlich wird ein Verweis mit [[...]] markiert
+discussion.info.publication              = Publikation
+discussion.info.publications             = Der Verweis setzt sich aus drei Teilen nach folgendem Muster zusammen: (publication|bibtex)?/hash(/username)?
+discussion.info.resource                 = Ressource
+discussion.publication.reviewCommentInfo = Sie k\u00F6nnen diese Publikation entweder kommentieren oder bewerten.
+discussion.references                    = Referenzen
+discussion.resourceLink                  = Den internen Link f\u00FCr diese {0} anzeigen
+discussion.resourceLink.help             = Sie k\u00F6nnen diesen internen Link benutzen, um diesen Eintrag in Ihren Diskussionen zu referenzieren. Sie m\u00FCssen nur diesen Link kopieren und in den Text zu ihrer Diskussion hinzuf\u00FCgen.
+discussion.resourceLink.title            = Interner Link
+discussion.review.create                 = Rezension schreiben
+discussion.show.less                     = nur die letzten f\u00FCnf Bewertungen/Kommentare zeigen
+discussion.show.more                     = gesammte Diskussion anzeigen
+discussion.showGroup                     = Zeige Eintr\u00E4ge von {0}
+discussion.showUser                      = Zeige Eintr\u00E4ge von {0}
 
 editTags.addTags              = durch diese Tags
 editTags.addTags.help         = Bei all Ihren Eintr\u00E4gen, die (u.a.) die oben eingegebenen Tags haben werden diese Tags  durch alle Tags, die Sie in dieses Feld eingeben, ersetzt.
