--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -499,6 +499,8 @@ discussion.show.more                     = show all discussion
 discussion.showGroup                     = show posts of {0}
 discussion.showUser                      = show posts of {0}
 
+document = Document
+
 editTags.addTags              = by these tags
 editTags.addTags.help         = In all your posts that have all the tags entered into the field above, these tags will be replaced by those entered in this field.
 editTags.delTags              = replace these tag(s)
