--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -498,6 +498,8 @@ discussion.show.more                     = gesammte Diskussion anzeigen
 discussion.showGroup                     = Zeige Eintr\u00E4ge von {0}
 discussion.showUser                      = Zeige Eintr\u00E4ge von {0}
 
+document = Dokument
+
 editTags.addTags              = durch diese Tags
 editTags.addTags.help         = Bei all Ihren Eintr\u00E4gen, die (u.a.) die oben eingegebenen Tags haben werden diese Tags  durch alle Tags, die Sie in dieses Feld eingeben, ersetzt.
 editTags.delTags              = Diese Tag(s) ersetzen
