adapted messages for import bookmarks menu

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1199,7 +1199,7 @@ navi.groupsettings               = settings
 navi.help                        = help
 navi.helpUrl                     = /help_en
 navi.home                        = home
-navi.imports                     = imports
+navi.imports                     = import bookmarks
 navi.inClipboard                 = there are {0} posts on your clipboard
 navi.inClipboard.singular        = there is one post on your clipboard
 navi.inInbox                     = there are {0} posts in your inbox
