--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1189,7 +1189,7 @@ navi.groupsettings               = Einstellungen
 navi.help                        = Hilfe
 navi.helpUrl                     = /help_de
 navi.home                        = Home
-navi.imports                     = Importieren
+navi.imports                     = Lesezeichen importieren
 navi.inClipboard                 = Sie haben {0} Eintr\u00E4ge in Ihrer Ablage.
 navi.inClipboard.singular        = Sie haben einen Eintrag in Ihrer Ablage.
 navi.inInbox                     = Sie haben {0} Eintr\u00E4ge in Ihrem Eingang.
