better messages for group post edits better redirects

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1641,6 +1641,10 @@ post.resource.document.remove.error.title               = Error while deleting
 post.resource.editBookmark                              = edit your bookmark post
 post.resource.editGoldStandardBookmark                  = edit this community post
 post.resource.editGoldStandardPublication               = edit this community post
+post.resource.editGroupBookmark                         = edit this group bookmark post
+post.resource.editGroupPost.tags.describe               = tags - describe the post
+post.resource.editGroupPost.warning                     = You are editing the post of another user!
+post.resource.editGroupPublication                      = edit this group publication post
 post.resource.editPublication                           = edit your publication post
 post.resource.edition                                   = edition
 post.resource.edition.help                              = edition of a book, usually written in full as "Second"
