--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1630,6 +1630,10 @@ post.resource.document.remove.error.title               = Fehler beim L\u00F6sch
 post.resource.editBookmark                              = Bearbeiten Sie Ihr Lesezeichen
 post.resource.editGoldStandardBookmark                  = Bearbeiten Sie diesen Gemeinschaftseintrag
 post.resource.editGoldStandardPublication               = Bearbeiten Sie diesen Gemeinschaftseintrag
+post.resource.editGroupBookmark                         = Bearbeiten Sie dieses Gruppenlesezeichen
+post.resource.editGroupPost.tags.describe               = Tags - beschreiben Sie den Post
+post.resource.editGroupPost.warning                     = Sie bearbeiten den Post eines anderen Benutzers!
+post.resource.editGroupPublication                      = Bearbeiten Sie diese Gruppenpublikation
 post.resource.editPublication                           = Bearbeiten Sie Ihren Publikationseintrag
 post.resource.edition                                   = Auflage
 post.resource.edition.help                              = Die Auflage eines Buches, typischerweise als Zahlwort geschrieben (z. B. "Zweite")
