--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1479,6 +1479,10 @@ post.resource.discusssion.warning.goldstandard.continue = \u0412\u043D\u0438\u04
 post.resource.editBookmark                              = \u041E\u0442\u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u0432\u043E\u044E \u0437\u0430\u043A\u043B\u0430\u0434\u043A\u0443
 post.resource.editGoldStandardBookmark                  = \u043E\u0442\u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u0430
 post.resource.editGoldStandardPublication               = \u043E\u0442\u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u0430
+post.resource.editGroupBookmark                         = 
+post.resource.editGroupPost.tags.describe               = 
+post.resource.editGroupPost.warning                     = 
+post.resource.editGroupPublication                      = 
 post.resource.editPublication                           = \u041E\u0442\u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u0432\u043E\u044E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E
 post.resource.edition                                   = \u0438\u0437\u0434\u0430\u043D\u0438\u0435
 post.resource.edition.help                              = \u0438\u0437\u0434\u0430\u043D\u0438\u0435 \u043A\u043D\u0438\u0433\u0438, \u043E\u0431\u044B\u0447\u043D\u043E \u0437\u0430\u043F\u0438\u0441\u044B\u0432\u0430\u0435\u0442\u0441\u044F \u043F\u043E\u043B\u043D\u043E\u0441\u0442\u044C\u044E: (\u043D\u0430\u043F\u0440.,"\u0412\u0442\u043E\u0440\u043E\u0435")
